Removed dependency on guava